--- a/index.html
+++ b/index.html
@@ -23,32 +23,31 @@
 
         <div id="message" class="success-message"></div>
         <div id="error" class="error-message"></div>
+        
+<div class="client-info-container">
+    <div class="section-title">Informações do Cliente</div>
+    <div class="client-info-grid">
+        <div class="field"><label>Placa</label><input type="text" id="placa"></div>
+        <div class="field"><label>Modelo</label><input type="text" id="modelo"></div>
+        <div class="field"><label>Cor</label><input type="text" id="cor"></div>
+        <div class="field" style="grid-column: span 2;"><label>Data de Entrada</label><input type="date" id="dataEntrada"></div>
+        <div class="field" style="grid-column: span 2;"><label>Nº Ordem de serviço</label><input type="text" id="numOrdem"></div>
 
-        <div class="client-info-container">
-            <div class="section-title">Informações do Cliente</div>
-            <div class="client-info-grid">
-                <div class="field" style="grid-column: span 3;"><label>Nome do Cliente</label><input type="text" id="nomeCliente"></div>
-                <div class="field" style="grid-column: span 2;"><label>Telefones</label><input type="text" id="telefones"></div>
-                <div class="field" style="grid-column: span 2;"><label>Email</label><input type="text" id="email"></div>
-                <div class="field"><label>CPF</label><input type="text" id="cpf"></div>
-                
-                <div class="field"><label>Placa</label><input type="text" id="placa"></div>
-                <div class="field"><label>Fabricante</label><input type="text" id="fabricante"></div>
-                <div class="field"><label>Modelo</label><input type="text" id="modelo"></div>
-                <div class="field"><label>Ano</label><input type="text" id="ano"></div>
-                <div class="field"><label>Motor</label><input type="text" id="motor"></div>
-                <div class="field"><label>Portas</label><input type="text" id="portas"></div>
-                <div class="field"><label>Combustível</label><input type="text" id="combustivel"></div>
-                <div class="field"><label>Tanque</label><input type="text" id="tanque"></div>
-
-                <div class="field"><label>KM</label><input type="text" id="km"></div>
-                <div class="field"><label>Direção</label><input type="text" id="direcao"></div>
-                <div class="field"><label>Ar</label><input type="text" id="ar"></div>
-                <div class="field"><label>Cor</label><input type="text" id="cor"></div>
-                <div class="field" style="grid-column: span 2;"><label>Data de Entrada</label><input type="date" id="dataEntrada"></div>
-                <div class="field" style="grid-column: span 2;"><label>Nº Ordem de serviço</label><input type="text" id="numOrdem"></div>
-            </div>
-        </div>
+        <div class="field hidden-row"><label>Ar</label><input type="text" id="ar"></div>
+        <div class="field hidden-row" style="grid-column: span 3;"><label>Nome do Cliente</label><input type="text" id="nomeCliente"></div>
+        <div class="field hidden-row" style="grid-column: span 2;"><label>Telefones</label><input type="text" id="telefones"></div>
+        <div class="field hidden-row" style="grid-column: span 2;"><label>Email</label><input type="text" id="email"></div>
+        <div class="field hidden-row"><label>CPF</label><input type="text" id="cpf"></div>
+        <div class="field hidden-row"><label>Fabricante</label><input type="text" id="fabricante"></div>
+        <div class="field hidden-row"><label>Ano</label><input type="text" id="ano"></div>
+        <div class="field hidden-row"><label>Motor</label><input type="text" id="motor"></div>
+        <div class="field hidden-row"><label>Portas</label><input type="text" id="portas"></div>
+        <div class="field hidden-row"><label>Combustível</label><input type="text" id="combustivel"></div>
+        <div class="field hidden-row"><label>Tanque</label><input type="text" id="tanque"></div>
+        <div class="field hidden-row"><label>KM</label><input type="text" id="km"></div>
+        <div class="field hidden-row"><label>Direção</label><input type="text" id="direcao"></div>
+    </div>
+</div>
 
         <div class="status-summary">
             <div class="status-item">
